# python-tree-shaking

./: .gitignore  README.md  README.zh.md  changelog.md  config_example.yaml  example_config.yaml  pyproject.toml
demo_config/: built_tree.yaml
docs/: changelog.md
examples/: asa_gui_modules.yaml  depsland_modules.yaml
patches/: default_patches.yaml  implicit_imports_list.yaml  optional_imports_list.yaml
test/: check_symlink_existence.py
tree_shaking/: __init__.py  __main__.py  build.py  cache.py  config.py  config_parser.py  doctor.py  dump.py  export.py  file_parser.py  finder.py  graph.py  module.py  patch.py  path_scope.py  ui.py
tree_shaking/patches/: implicit_import_hooks.yaml  implicit_imports_list.yaml  optional_import_list.yaml
tree_shaking/patches/void_numpy/: __init__.py  exceptions.py
