[project]
name = "tree-shaking"
version = "0.2.4b0"
description = "Python tree-shaking for dependencies to reduce the size of packaging."
authors = [{ name = "Likianta", email = "likianta@foxmail.com" }]
readme = "README.md"
packages = [{ include = "tree_shaking" }]
requires-python = ">=3.12"
dynamic = ["dependencies"]

[project.urls]
homepage = "https://github.com/likianta/python-tree-shaking"

[tool.poetry.dependencies]
python = "^3.12"
argsense = "^1.1.0"
lk-utils = "^3.5.0"
streamlit = { version = "^1.55.0", optional = true }
streamlit-canary = { version = "^0.1.0", optional = true }

[tool.poetry.group.dev.dependencies]
argsense = { version = "^1.1.1a0", source = "likianta" }
lk-utils = { version = "^3.5.0", source = "likianta" }
# pyecharts = "^2.0.8"
pyinstaller = { version = "^6.19.0", python = ">=3.12,<3.15" }
# pyyaml = "^6.0.0"
streamlit = "^1.55.0"
streamlit-canary = { version = "^0.1.1a19", source = "likianta" }

[project.optional-dependencies]
ui = ["streamlit", "streamlit-canary"]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "likianta"
url = "http://localhost:2191/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
