[project]
name = "tree-shaking"
version = "0.2.4"
description = "Python tree-shaking for dependencies to reduce the size of packaging."
authors = [{ name = "Likianta", email = "likianta@foxmail.com" }]
readme = "README.md"
packages = [{ include = "tree_shaking" }]
requires-python = ">=3.12"
dynamic = ["dependencies"]

[project.urls]
homepage = "https://github.com/likianta/python-tree-shaking"

[tool.poetry.dependencies]
python = "^3.12"
argsense = "^1.1.0"
lk-utils = "^3.5.0"

[tool.poetry.group.dev.dependencies]
argsense = { version = "^1.1.1a0", source = "likianta" }
lk-utils = { version = "^3.5.0", source = "likianta" }

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "likianta"
url = "http://localhost:2191/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
