[project]
name = "tree-shaking"
version = "0.2.5a6"
description = "Python tree-shaking for dependencies to reduce the size of packaging."
authors = [{ name = "Likianta", email = "likianta@foxmail.com" }]
readme = "README.md"
packages = [{ include = "tree_shaking" }]
requires-python = ">=3.12"
dynamic = ["dependencies"]

[project.urls]
homepage = "https://github.com/likianta/python-tree-shaking"

[tool.poetry.dependencies]
python = "^3.12"
argsense = "^1.1.1"
lk-utils = "^3.5.2"
poetry = "^2.3.4"

[tool.poetry.group.dev.dependencies]
argsense = { version = "^1.1.1", source = "likianta" }
lk-utils = { version = "^3.6.0a10", source = "likianta" }

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "likianta"
url = "http://localhost:2191/"
priority = "supplemental"

[tool.ty.rules]
invalid-type-form = "ignore"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
